--- a/bootstrap/applications/templates/core/cert-manager.yaml
+++ b/bootstrap/applications/templates/core/cert-manager.yaml
@@ -2,17 +2,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bitwarden
+  name: cert-manager
   namespace: {{ .Values.argocd.namespace }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "-2"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   destination:
-    namespace: bitwarden
+    namespace: cert-manager-system
     server: {{ .Values.destination.server }}
   source:
-    path: applications/bitwarden
+    path: platform/cert-manager
     repoURL: {{ .Values.source.repository }}
     targetRevision: {{ .Values.source.defaultBranch }}
     helm:
