--- a/bootstrap/applications/templates/core/nginx.yaml
+++ b/bootstrap/applications/templates/core/nginx.yaml
@@ -2,22 +2,21 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager
+  name: nginx
   namespace: {{ .Values.argocd.namespace }}
+  annotations:
+    argocd.argoproj.io/sync-wave: "-2"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   destination:
-    namespace: cert-manager-system
+    namespace: nginx-system
     server: {{ .Values.destination.server }}
   source:
-    path: platform/cert-manager
+    path: platform/nginx
     repoURL: {{ .Values.source.repository }}
     targetRevision: {{ .Values.source.defaultBranch }}
-    helm:
-      valueFiles:
-        - secrets+age-import:///helm-secrets-private-keys/keys.txt?secret.enc.yaml
   syncPolicy:
     automated: {}
     syncOptions:
