feat: add helm private key secret to argocd

--- a/bootstrap/applications/templates/init/argocd.yaml
+++ b/bootstrap/applications/templates/init/argocd.yaml
@@ -17,6 +17,9 @@ spec:
     path: bootstrap/argocd
     repoURL: {{ .Values.source.repository }}
     targetRevision: {{ .Values.source.defaultBranch }}
+    helm:
+      valueFiles:
+        - secrets+age-import:///helm-secrets-private-keys/keys.txt?secret.enc.yaml
   syncPolicy:
     automated: {}
     syncOptions:
