--- a/infrastructure/cluster/k0sctl.yaml
+++ b/infrastructure/cluster/k0sctl.yaml
@@ -4,7 +4,7 @@ metadata:
   name: k0s-cluster
 spec:
   hosts:
-  - role: controller
+  - role: controller+worker
     ssh:
       address: 10.0.50.10
       user: core
