feat: update longhorn to v1.3.0 and add backup target

--- a/platform/longhorn/values.yaml
+++ b/platform/longhorn/values.yaml
@@ -1,4 +1,7 @@
 longhorn:
+  defaultSettings:
+    backupTarget: "nfs://freenas.i.kiessla.de:/mnt/main-storage/kubernetes"
+
   ingress:
     enabled: true
     ingressClassName: nginx
