--- a/bootstrap/applications/templates/core/metallb.yaml
+++ b/bootstrap/applications/templates/core/metallb.yaml
@@ -22,8 +22,13 @@ spec:
     syncOptions:
       - CreateNamespace=true
   ignoreDifferences:
-    - group: apiextensions
+    - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
       name: addresspools.metallb.io
+      jsonPointers:
+        - /spec/conversion/webhook/clientConfig/caBundle
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: bgppeers.metallb.io
       jsonPointers:
         - /spec/conversion/webhook/clientConfig/caBundle
