--- a/applications/authelia/values.yaml
+++ b/applications/authelia/values.yaml
@@ -108,6 +108,22 @@ authelia:
       file:
         enabled: true
 
+    access_control:
+      default_policy: deny
+
+      networks:
+        - name: internal
+          networks:
+            - 10.0.0.0/16
+
+      rules:
+        - domain: longhorn.caas.i.kiessla.de
+          policy: one_factor
+          networks:
+            - internal
+          subject:
+            - "group:admins"
+
     session:
       redis:
         enabled: false
