--- a/platform/longhorn/values.yaml
+++ b/platform/longhorn/values.yaml
@@ -10,3 +10,9 @@ longhorn:
     tlsSecret: "longhorn.acme-tls"
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt
+      nginx.ingress.kubernetes.io/auth-method: GET
+      nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
+      nginx.ingress.kubernetes.io/auth-signin: https://auth.caas.i.kiessla.de?rm=$request_method
+      nginx.ingress.kubernetes.io/auth-snippet: |
+        proxy_set_header X-Forwarded-Method $request_method;
+      nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
