--- a/platform/metallb/bases/pool.yaml
+++ b/platform/metallb/bases/pool.yaml
@@ -14,3 +14,11 @@ metadata:
 spec:
   addresses:
     - 10.0.40.5/32
+---
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
+  name: app
+spec:
+  addresses:
+    - 10.0.90.5/32
