feat: add authelia rule to protect postgres operator ui

--- a/applications/authelia/values.yaml
+++ b/applications/authelia/values.yaml
@@ -123,6 +123,12 @@ authelia:
             - internal
           subject:
             - "group:admins"
+        - domain: postgres.caas.i.kiessla.de
+          policy: one_factor
+          networks:
+            - internal
+          subject:
+            - "group:admins"
 
     session:
       redis:
