--- a/platform/nginx/Chart.yaml
+++ b/platform/nginx/Chart.yaml
@@ -13,3 +13,7 @@ dependencies:
     version: 4.4.0
     repository: https://kubernetes.github.io/ingress-nginx
     alias: public
+  - name: ingress-nginx
+    version: 4.4.0
+    repository: https://kubernetes.github.io/ingress-nginx
+    alias: app
